Added velocity package to npm version check

--- a/check_npm_package_versions.html
+++ b/check_npm_package_versions.html
@@ -78,7 +78,8 @@
         html += addPackageVersionsToTable("@esri/solution-hub-types", "hub-types");
         html += addPackageVersionsToTable("@esri/solution-simple-types", "simple-types");
         html += addPackageVersionsToTable("@esri/solution-storymap", "storymap");
-        html += addPackageVersionsToTable("@esri/solution-viewer", "viewer");
+        html += addPackageVersionsToTable("@esri/solution-velocity", "viewer");
+        html += addPackageVersionsToTable("@esri/solution-viewer", "velocity");
         html += addPackageVersionsToTable("@esri/solution-web-experience", "web-experience");
 
         html += "</table>";
