--- a/demos/index.html
+++ b/demos/index.html
@@ -16,6 +16,7 @@
   <li><a href="createFolder/" target="_blank">Create an AGO folder</a></li>
   <li><a href="deleteSolution" target="_blank">Delete a Solution</a></li>
   <li><a href="deploySolution/" target="_blank">Deploy a Solution</a></li>
+  <li><a href="getItemHierarchy/" target="_blank">Display the hierarchy of items in a solution (similar to the AGO display of a solution item)</a></li>
   <li><a href="getItemInfo/" target="_blank">Get information about an item</a></li>
   <li><a href="implementedTypes/" target="_blank">List the AGO types that are implemented or being worked on</a></li>
   <li><a href="getGroupInfo/" target="_blank">List the ids of the items in a group</a></li>
