Updated getItemHierarchy to show item titles

--- a/demos/getItemHierarchy/index.html
+++ b/demos/getItemHierarchy/index.html
@@ -24,14 +24,8 @@
   body {
     padding: 16px;
   }
-  button {
-    cursor: pointer;
-  }
-  td {
-    border: none;
-  }
-  li {
-    margin-bottom: 12px;
+  ul {
+    margin: 0;
   }
   </style>
 </head>
