--- a/demos/copyItemInfo/index.html
+++ b/demos/copyItemInfo/index.html
@@ -20,10 +20,9 @@
   -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://esri.github.io/calcite-bootstrap/styles/calcite-bootstrap.min.css">
-  <link rel="stylesheet" href="https://js.arcgis.com/4.17/esri/themes/light/main.css" />
   <style>
   body {
-    padding: 8px;
+    padding: 16px;
   }
   button {
     cursor: pointer;
@@ -32,70 +31,65 @@
     border: none;
   }
   </style>
-  <script>
-    var package_path = window.location.href.substring(0, window.location.href.lastIndexOf('/'));
-    var dojoConfig = {
-      "paths": {
-        "@esri/arcgis-rest-auth": package_path + "/../node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
-        "@esri/arcgis-rest-feature-layer": package_path + "/../node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
-        "@esri/arcgis-rest-portal": package_path + "/../node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
-        "@esri/arcgis-rest-request": package_path + "/../node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.min",
-        "@esri/arcgis-rest-service-admin": package_path + "/../node_modules/@esri/arcgis-rest-service-admin/dist/umd/service-admin.umd.min",
-        "@esri/hub-common": package_path + "/../node_modules/@esri/hub-common/dist/umd/common.umd.min",
-        "@esri/hub-initiatives": package_path + "/../node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd.min",
-        "@esri/hub-sites": package_path + "/../node_modules/@esri/hub-sites/dist/umd/sites.umd.min",
-        "@esri/hub-teams": package_path + "/../node_modules/@esri/hub-teams/dist/umd/teams.umd.min",
-        "@esri/solution-common": package_path + "/../node_modules/@esri/solution-common/dist/umd/common.umd",
-        "adlib": package_path + "/../node_modules/adlib/dist/adlib",
-        "tslib": package_path + "/../node_modules/tslib/tslib",
-      }
-    };
-  </script>
-  <script src="https://js.arcgis.com/4.17/"></script>
 </head>
 <body>
   <div id="input" style="display:none">
     <label for="id">ID of the item to be copied:&nbsp;</label><input type="text" id="id" style="width:256px">
-
+    <br /><br />
+    <i>For feature services, forms, and private items:</i><br />
+    <label for="username">username:&nbsp;</label><input type="text" id="username">
+    <label for="password">password:&nbsp;</label><input type="password" id="password">
+    <label for="srcPortal">portal:&nbsp;</label><input type="text" id="srcPortal" style="width:256px">
+    <br /><br />
     <button onclick="goFcn()">Go</button>
   </div>
-  <div id="output" style="display:none">Fetching...</div>
+  <div id="output" style="display:none">Copying...</div>
 
   <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
+  <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script>
     var goFcn;
+    document.getElementById("srcPortal").value = "https://www.arcgis.com";
+    require.config({
+      paths: {
+        "@esri/arcgis-rest-auth": "../node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
+        "@esri/arcgis-rest-feature-layer": "../node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
+        "@esri/arcgis-rest-portal": "../node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
+        "@esri/arcgis-rest-request": "../node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.min",
+        "@esri/arcgis-rest-service-admin": "../node_modules/@esri/arcgis-rest-service-admin/dist/umd/service-admin.umd.min",
+        "@esri/hub-common": "../node_modules/@esri/hub-common/dist/umd/common.umd.min",
+        "@esri/hub-initiatives": "../node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd.min",
+        "@esri/hub-sites": "../node_modules/@esri/hub-sites/dist/umd/sites.umd.min",
+        "@esri/hub-teams": "../node_modules/@esri/hub-teams/dist/umd/teams.umd.min",
+        "@esri/solution-common": "../node_modules/@esri/solution-common/dist/umd/common.umd",
+        "adlib": "../node_modules/adlib/dist/adlib",
+        "tslib": "../node_modules/tslib/tslib"
+      }
+    });
 
-    require(["esri/portal/Portal", "@esri/arcgis-rest-auth", "../dist/copy-item-info-main.js"],
-      function (Portal, auth, main) {
+    require(["@esri/arcgis-rest-auth", "../dist/copy-item-info-main.js"],
+      function (auth, main) {
         "use strict";
         goFcn = go;
         document.getElementById("input").style.display = "block";
 
         function go () {
-          var portal = new Portal();
-          // Setting authMode to immediate signs the user in once loaded
-          portal.authMode = "immediate";
+          document.getElementById("input").style.display = "none";
+          document.getElementById("output").style.display = "block";
 
-          // Once portal is loaded, user signed in
-          portal.load().then(
-            () => {
-              var credential = portal.credential;
-              if (credential) {
-                document.getElementById("input").style.display = "none";
-                document.getElementById("output").style.display = "block";
-
-                main.copyItemInfo(
-                  document.getElementById("id").value,
-                  auth.UserSession.fromCredential(credential)
-                ).then(
-                  html => {
-                    document.getElementById("output").innerHTML = html;
-                  },
-                  error => {
-                    document.getElementById("output").innerHTML = "<span style=\"color:red\">" + error + "</span>";
-                  }
-                );
-              }
+          main.copyItemInfo(
+            document.getElementById("id").value,
+            new auth.UserSession({
+              username: document.getElementById("username").value,
+              password: document.getElementById("password").value,
+              portal: document.getElementById("srcPortal").value + "/sharing/rest"
+            })
+          ).then(
+            html => {
+              document.getElementById("output").innerHTML = html;
+            },
+            error => {
+              document.getElementById("output").innerHTML = "<span style=\"color:red\">" + error + "</span>";
             }
           );
         }
