--- a/demos/copySolutions/index.html
+++ b/demos/copySolutions/index.html
@@ -20,7 +20,6 @@
   -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://esri.github.io/calcite-bootstrap/styles/calcite-bootstrap.min.css">
-  <link rel="stylesheet" href="https://js.arcgis.com/4.17/esri/themes/light/main.css" />
   <style>
   html {
     font-family: Arial;
@@ -58,27 +57,6 @@
     transition: 0.5s;
   }
   </style>
-  <script>
-    var package_path = window.location.href.substring(0, window.location.href.lastIndexOf('/'));
-    var dojoConfig = {
-      "paths": {
-        "@esri/arcgis-html-sanitizer": package_path + "/../node_modules/@esri/arcgis-html-sanitizer/dist/umd/arcgis-html-sanitizer.min",
-        "@esri/arcgis-rest-auth": package_path + "/../node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
-        "@esri/arcgis-rest-feature-layer": package_path + "/../node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
-        "@esri/arcgis-rest-portal": package_path + "/../node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
-        "@esri/arcgis-rest-request": package_path + "/../node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.min",
-        "@esri/arcgis-rest-service-admin": package_path + "/../node_modules/@esri/arcgis-rest-service-admin/dist/umd/service-admin.umd.min",
-        "@esri/hub-common": package_path + "/../node_modules/@esri/hub-common/dist/umd/common.umd.min",
-        "@esri/hub-initiatives": package_path + "/../node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd.min",
-        "@esri/hub-sites": package_path + "/../node_modules/@esri/hub-sites/dist/umd/sites.umd.min",
-        "@esri/hub-teams": package_path + "/../node_modules/@esri/hub-teams/dist/umd/teams.umd.min",
-        "@esri/solution-common": package_path + "/../node_modules/@esri/solution-common/dist/umd/common.umd",
-        "adlib": package_path + "/../node_modules/adlib/dist/adlib",
-        "tslib": package_path + "/../node_modules/tslib/tslib"
-      }
-    };
-  </script>
-  <script src="https://js.arcgis.com/4.17/"></script>
 </head>
 <body>
   <h3>Copy solution templates</h3>
@@ -145,8 +123,26 @@
   </div>
 
   <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
+  <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script>
     var connectToSourceFcn, connectToDestinationFcn;
+    require.config({
+      paths: {
+        "@esri/arcgis-html-sanitizer": "../node_modules/@esri/arcgis-html-sanitizer/dist/umd/arcgis-html-sanitizer.min",
+        "@esri/arcgis-rest-auth": "../node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
+        "@esri/arcgis-rest-feature-layer": "../node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
+        "@esri/arcgis-rest-portal": "../node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
+        "@esri/arcgis-rest-request": "../node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.min",
+        "@esri/arcgis-rest-service-admin": "../node_modules/@esri/arcgis-rest-service-admin/dist/umd/service-admin.umd.min",
+        "@esri/hub-common": "../node_modules/@esri/hub-common/dist/umd/common.umd.min",
+        "@esri/hub-initiatives": "../node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd.min",
+        "@esri/hub-sites": "../node_modules/@esri/hub-sites/dist/umd/sites.umd.min",
+        "@esri/hub-teams": "../node_modules/@esri/hub-teams/dist/umd/teams.umd.min",
+        "@esri/solution-common": "../node_modules/@esri/solution-common/dist/umd/common.umd",
+        "adlib": "../node_modules/adlib/dist/adlib",
+        "tslib": "../node_modules/tslib/tslib"
+      }
+    });
 
     require(["@esri/arcgis-rest-auth", "@esri/arcgis-rest-portal", "@esri/arcgis-html-sanitizer", "../dist/copy-solutions-main.js", "../dist/demoCommon.js"],
       function (auth, portal, htmlSanitizer, main, demoCommon) {
