--- a/index.html
+++ b/index.html
@@ -166,19 +166,19 @@
   <h3>Frequently Asked Questions</h3>
 </a>
 <ul>
-<li><a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/guides/FAQ.md#is-this-a-supported-esri-product">Is this a supported Esri product?</a></li>
-<li><a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/guides/FAQ.md#what-browsers-are-supported">What browsers are supported?</a></li>
-<li><a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/guides/FAQ.md#what-is-the-development-workflow">What is the development workflow?</a></li>
+<li><a href="https://github.com/Esri/solution.js/blob/master/guides/FAQ.md#is-this-a-supported-esri-product">Is this a supported Esri product?</a></li>
+<li><a href="https://github.com/Esri/solution.js/blob/master/guides/FAQ.md#what-browsers-are-supported">What browsers are supported?</a></li>
+<li><a href="https://github.com/Esri/solution.js/blob/master/guides/FAQ.md#what-is-the-development-workflow">What is the development workflow?</a></li>
 </ul>
 
 <a href="#guides" id="guides" style="color: inherit; text-decoration: none;">
   <h3>Guides</h3>
 </a>
 <ul>
-<li><a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/guides/package-overview.md">Package overview</a></li>
-<li><a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/guides/deployment.md">Deploying with the repository</a></li>
-<li><a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/guides/">Authentication in Browser-based Apps</a></li>
-<li><a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/guides/Publishing%29to%20npmjs.md">Publishing to npmjs</a></li>
+<li><a href="https://github.com/Esri/solution.js/blob/master/guides/package-overview.md">Package overview</a></li>
+<li><a href="https://github.com/Esri/solution.js/blob/master/guides/deployment.md">Deploying with the repository</a></li>
+<li><a href="https://github.com/Esri/solution.js/blob/master/guides/">Authentication in Browser-based Apps</a></li>
+<li><a href="https://github.com/Esri/solution.js/blob/master/guides/Publishing%29to%20npmjs.md">Publishing to npmjs</a></li>
 </ul>
 
 <a href="#issues" id="issues" style="color: inherit; text-decoration: none;">
@@ -188,7 +188,7 @@
 if you don&#39;t see your concern, please let us know by <a href="https://github.com/Esri/solution.js/issues/new">submitting an issue</a>.</p>
 
 <a href="#changelog" id="changelog" style="color: inherit; text-decoration: none;">
-  <h3><a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/CHANGELOG.md">Changelog</a></h3>
+  <h3><a href="https://github.com/Esri/solution.js/blob/master/CHANGELOG.md">Changelog</a></h3>
 </a>
 
 <a href="#versioning" id="versioning" style="color: inherit; text-decoration: none;">
@@ -199,7 +199,7 @@ if you don&#39;t see your concern, please let us know by <a href="https://github
 <a href="#contributing" id="contributing" style="color: inherit; text-decoration: none;">
   <h2>Contributing</h2>
 </a>
-<p>Esri welcomes contributions from anyone and everyone. Please see our <a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/CONTRIBUTING.md">guidelines for contributing</a>.</p>
+<p>Esri welcomes contributions from anyone and everyone. Please see our <a href="https://github.com/Esri/solution.js/blob/master/CONTRIBUTING.md">guidelines for contributing</a>.</p>
 
 <a href="#license" id="license" style="color: inherit; text-decoration: none;">
   <h3>License</h3>
@@ -216,6 +216,6 @@ distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.</p>
-<p>A copy of the license is available in the repository&#39;s <a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/LICENSE">LICENSE</a> file.</p>
-<p><strong><a href="https://github.com/Esri/solution.js/blob/ch/update-doc-sys/Third-Party%20Licenses.md">Third-Party Licenses</a></strong></p>
+<p>A copy of the license is available in the repository&#39;s <a href="https://github.com/Esri/solution.js/blob/master/LICENSE">LICENSE</a> file.</p>
+<p><strong><a href="https://github.com/Esri/solution.js/blob/master/Third-Party%20Licenses.md">Third-Party Licenses</a></strong></p>
 </div></div><div class="col-4 col-menu menu-sticky-wrap menu-highlight"><nav class="tsd-navigation primary"><ul><li class="current"><a href="modules.html">Modules</a></li><li class=" tsd-kind-module"><a href="modules/common.html">common</a></li><li class=" tsd-kind-module"><a href="modules/creator.html">creator</a></li><li class=" tsd-kind-module"><a href="modules/deployer.html">deployer</a></li><li class=" tsd-kind-module"><a href="modules/feature_layer.html">feature-<wbr/>layer</a></li><li class=" tsd-kind-module"><a href="modules/file.html">file</a></li><li class=" tsd-kind-module"><a href="modules/hubTypes.html">hub<wbr/>Types</a></li><li class=" tsd-kind-module"><a href="modules/simple_types.html">simple-<wbr/>types</a></li><li class=" tsd-kind-module"><a href="modules/simple_types.html">simple-<wbr/>types</a></li><li class=" tsd-kind-module"><a href="modules/solution_form.html">solution-<wbr/>form</a></li><li class=" tsd-kind-module"><a href="modules/storymap.html">storymap</a></li><li class=" tsd-kind-module"><a href="modules/velocity_src.html">velocity/src</a></li><li class=" tsd-kind-module"><a href="modules/viewer.html">viewer</a></li><li class=" tsd-kind-module"><a href="modules/web_experience_src.html">web-<wbr/>experience/src</a></li></ul></nav></div></div></div><footer class="with-border-bottom"><div class="container"><h2>Legend</h2><div class="tsd-legend-group"><ul class="tsd-legend"><li class="tsd-kind-namespace"><span class="tsd-kind-icon">Namespace</span></li><li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li><li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li><li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li></ul><ul class="tsd-legend"><li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li></ul><ul class="tsd-legend"><li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li></ul></div><h2>Settings</h2><p>Theme <select id="theme"><option value="os">OS</option><option value="light">Light</option><option value="dark">Dark</option></select></p></div></footer><div class="container tsd-generator"><p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div><div class="overlay"></div><script src="assets/main.js"></script></body></html>
