--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 <ul>
 <li><a href="https://github.com/Esri/solution.js/blob/master/guides/package-overview.md">Package overview</a></li>
 <li><a href="https://github.com/Esri/solution.js/blob/master/guides/deployment.md">Deploying with the repository</a></li>
-<li><a href="https://github.com/Esri/solution.js/blob/master/guides/">Authentication in Browser-based Apps</a></li>
-<li><a href="https://github.com/Esri/solution.js/blob/master/guides/Publishing%29to%20npmjs.md">Publishing to npmjs</a></li>
+<li><a href="https://github.com/Esri/solution.js/blob/master/guides/browser-authentication.md">Authentication in Browser-based Apps</a></li>
+<li><a href="https://github.com/Esri/solution.js/blob/master/guides/Publishing%20to%20npmjs.md">Publishing to npmjs</a></li>
 </ul>
 
 <a href="#issues" id="issues" style="color: inherit; text-decoration: none;">
