Add bootstrap CSS

--- a/demos/copySolutions/index.html
+++ b/demos/copySolutions/index.html
@@ -18,6 +18,7 @@
    | See the License for the specific language governing permissions and
    | limitations under the License.
   -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script>
     var connectToSourceFcn, connectToDestinationFcn;
   </script>
@@ -26,7 +27,7 @@
   <h3>Copy solution templates</h3>
 
   <div id="page">
-    <img id="page_busySymbol" src="../images/loading.gif">
+    <img id="page_busySymbol" src="loading.gif">
 
     <div id="credentialsDiv" class="section fader">
       <div class="section-title">Credentials in source organization</div>
