--- a/demos/compareJSON/index.html
+++ b/demos/compareJSON/index.html
@@ -18,6 +18,7 @@
    | See the License for the specific language governing permissions and
    | limitations under the License.
   -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script>
     var goFcn, loadFcn;
   </script>
