Fix link to demo

--- a/demos/index.html
+++ b/demos/index.html
@@ -14,7 +14,7 @@
   <li><a href="copySolutions/dist/" target="_blank">Copy one or more solutions between organizations</a></li>
   <li><a href="createSolution/dist/" target="_blank">Create a Solution</a></li>
   <li><a href="createFolder/dist/" target="_blank">Create an AGO folder</a></li>
-  <li><a href="deleteSolutiondist/" target="_blank">Delete a Solution</a></li>
+  <li><a href="deleteSolution/dist/" target="_blank">Delete a Solution</a></li>
   <li><a href="deploySolution/dist/" target="_blank">Deploy a Solution</a></li>
   <li><a href="getItemHierarchy/dist/" target="_blank">Display the hierarchy of items in a solution (similar to the AGO display of a solution item)</a></li>
   <li><a href="getPortalInfo/dist/" target="_blank">Get information about a portal</a></li>
