Convert verifySolution demo to webpack

--- a/demos/index.html
+++ b/demos/index.html
@@ -26,6 +26,7 @@
   <li><a href="sanitizer/dist/" target="_blank">Sanitize HTML or JSON</a></li>
   <li><a href="searchGroupCategories/dist/" target="_blank">Search for groups using combinations of categories</a></li>
   <li><a href="templatization/dist/" target="_blank">See example of template replacement</a></li>
+  <li><a href="verifySolution/dist/" target="_blank">Verify a solution</a></li>
 </ol>
 </body>
 </html>
