--- a/demos/createSolution/index.html
+++ b/demos/createSolution/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8"/>
-  <title>compareJSON example</title>
+  <title>createSolution example</title>
   <!--
    | Copyright 2023 Esri
    |
