Add implementedTypes demo

--- a/demos/index.html
+++ b/demos/index.html
@@ -15,6 +15,7 @@
   <li><a href="deleteSolution/dist/" target="_blank">Delete a Solution</a></li>
   <li><a href="deploySolution/dist/" target="_blank">Deploy a Solution</a></li>
   <li><a href="getItemInfo/dist/" target="_blank">Get information about an item</a></li>
+  <li><a href="implementedTypes/dist/" target="_blank">List the AGO types that are implemented or being worked on</a></li>
   <li><a href="verifySolution/dist/" target="_blank">Verify a solution</a></li>
 </ol>
 </body>
