Add compareSolutions demo

--- a/demos/index.html
+++ b/demos/index.html
@@ -9,6 +9,7 @@
 <h3>ArcGIS solutions.js Demos</h3>
 <ol>
   <li><a href="compareJSON/dist/" target="_blank">Compare two blocks of JSON, with the option to generate the second block as a sanitized version of the first block</a></li>
+  <li><a href="compareSolutions/dist/" target="_blank">Compare two solution items (files are only compared by name)</a></li>
   <li><a href="copyItemInfo/dist/" target="_blank">Creates a copy of an item</li>
   <li><a href="copySolutions/dist/" target="_blank">Copy one or more solutions between organizations</a></li>
   <li><a href="createSolution/dist/" target="_blank">Create a Solution</a></li>
